--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ html {
 body {
   background-color: hsl(225, 100%, 94%);
   background-image: url("images/pattern-background-desktop.svg");
-  background-position: center -13%;
+  background-position: center -20%;
+  background-size: 100%;
   background-repeat: no-repeat;
   font-family: "Red Hat Display", sans-serif;
   height: 100vh;
